welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:1: error: not found: value dgauche
  dgauche()
  ^