welcome.lessons.welcome.traversal.line.TraversalByLine.scala.code
override def run() {
  dgauche()
  var compteur:Int=0
  while ((!(getX() ==getMondeLargeur()-1) && getY() == getMondeHauteur()-1)) {
    ecritMessage(compteur)
    setPos(getX()+1,getY())
    compteur+=1
    if (estFaceMur() && (getX()==6) ){
      ecritMessage(compteur)
      compteur+=1
      setPos(0,getY()+1)
    }   
  }
  ecritMessage(compteur)
}

